# edrums.github.io

./: .editorconfig  .gitignore  404.md  CNAME  Gemfile  Gruntfile.js  README.md  TODO.md  _Sidebar.md  _config.yml  atom.xml  blogging-template.html  index.html  index.md  manifest.json  mkdocs.yml  new_post.sh  package-lock.json  package.json  pyproject.toml  setup.sh  sitemap.xml
.assets/scss/: style.scss
.github/workflows/: build.yml
_assets/js/: analytics.js
_assets/less/: edrums.less  style.less  syntax-highlight.less
_assets/scss/: style.scss
_includes/: archive.html  aside.html  feed.xml  footer.html  head.html  header.html  navigation.html  post.html  recent-news.html  scripts.html  search.html  variables.html
_includes/en/: navigation.html
_includes/it/: navigation.html
_layouts/: default.html  home.html  post.html
_posts/: 2017-07-02-new-website-launched.md  2017-07-02-nuovo-sito-avviato.md
adding_pads/: index.md
archlinux/: drums.lscp  linuxsampler@.service  realtime.md  services.md
assets/css/: global.min.css  style.css  style.min.css  style.min.css.map
assets/js/: fontawesome.min.js  global.min.js  scripts.min.js
data/layout/: cards.yml  (+1 more)
docs/: .htaccess  index.md
en/: feed.xml  index.html  index.md
esplash/: index.md
it/: feed.xml  index.html  index.md
linuxsampler/: index.md
mesh_heads/: index.md
microdrum/: faq.md  home.md  index.md  parts.md  parts_v0.8.md  software.md
samplerbox/: build.md  faq.md  home.md
scripts/: download.py  hooks.py
search/: index.md  search.js  search_index.json
utilities/: index.md
(+215 files in other folders)
